--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
+    "node-localstorage": "^2.2.1",
     "nodemailer": "^6.9.1",
     "sequelize": "^6.28.0",
     "speakeasy": "^2.0.0"
